Fix: Se realizo combios para el fast_fail y el storage

--- a/src/UCS.DebtorBatch.Api/UCS.DebtorBatch.Api.csproj
+++ b/src/UCS.DebtorBatch.Api/UCS.DebtorBatch.Api.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Google.Apis.Auth" Version="1.73.0" />
+    <PackageReference Include="Google.Apis.Drive.v3" Version="1.73.0.4045" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.2" />
     <PackageReference Include="MiniExcel" Version="1.42.0" />
     <PackageReference Include="Polly" Version="8.6.5" />
