--- a/src/UCS.DebtorBatch.Api/appsettings.json
+++ b/src/UCS.DebtorBatch.Api/appsettings.json
@@ -2,17 +2,24 @@
   "Import": {
     "MaxFileSizeMB": 10,
     "BatchSize": 500,
+
     "FailFastThresholdPercent": 10,
+    "FailFastInspectRows": 100,
+
     "JobStateTTLHours": 24,
     "ValidationCacheTTLDays": 7,
     "RetryAttempts": 3,
     "CoreTimeoutSeconds": 30,
-    "PresignedUrlExpirationMinutes": 15
+
+    "PresignedUrlExpirationMinutes": 15,
+    "FileRetentionDays": 7
   },
+
   "Core": {
     "BaseUrl": "https://api-uat-modular-peyza-core-g2dzgkdgb2ecakam.mexicocentral-01.azurewebsites.net",
     "DebtorBatchImportPath": "/debtors/batch-import"
   },
+
   "MockIdentity": {
     "Enabled": true,
     "TenantId": "11111111-1111-1111-1111-111111111111",
@@ -20,6 +27,7 @@
     "UserId": "33333333-3333-3333-3333-333333333333",
     "Permissions": [ "debtor:batch:create" ]
   },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
