Fix: cambios en la logica del importBackgroundWorker y implementacion de nueva libreria closedExcel

--- a/src/UCS.DebtorBatch.Api/UCS.DebtorBatch.Api.csproj
+++ b/src/UCS.DebtorBatch.Api/UCS.DebtorBatch.Api.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.2" />
     <PackageReference Include="MiniExcel" Version="1.42.0" />
     <PackageReference Include="Polly" Version="8.6.5" />
+	  <PackageReference Include="ClosedXML" Version="0.102.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="10.1.2" />
   </ItemGroup>
 
