--- a/src/UCS.DebtorBatch.Api/appsettings.json
+++ b/src/UCS.DebtorBatch.Api/appsettings.json
@@ -14,6 +14,96 @@
     "PresignedUrlExpirationMinutes": 15,
     "FileRetentionDays": 7
   },
+  "ErrorPresentation": {
+    "Mappings": [
+      {
+        "Contains": "ExternalKey/Identificación is required",
+        "Friendly": "Identificación obligatoria.",
+        "Hint": "Completa la columna Identificación (cédula/RUC) para esta fila."
+      },
+      {
+        "Contains": "FirstName/Nombres is required",
+        "Friendly": "Nombres obligatorios.",
+        "Hint": "Completa la columna Nombres. No puede quedar vacía."
+      },
+      {
+        "Contains": "Amount must be > 0",
+        "Friendly": "Monto inválido.",
+        "Hint": "El monto debe ser mayor a 0. Ejemplo: 25.50"
+      },
+      {
+        "Contains": "DueDate is invalid or missing",
+        "Friendly": "Fecha de vencimiento inválida o vacía.",
+        "Hint": "Ingresa una fecha válida. Formato recomendado: YYYY-MM-DD (ej: 2026-02-12)."
+      },
+      {
+        "Contains": "Invalid email format",
+        "Friendly": "Correo inválido.",
+        "Hint": "Ejemplo válido: usuario@dominio.com (sin espacios)."
+      },
+      {
+        "Contains": "Invalid phone format",
+        "Friendly": "Teléfono inválido.",
+        "Hint": "Usa un formato permitido (ej: +593987654321 o 0987654321, según tu perfil)."
+      },
+
+      {
+        "Contains": "Invalid identification for algorithm MOD_01_EC",
+        "Friendly": "Cédula inválida.",
+        "Hint": "Verifica que tenga 10 dígitos y sea una cédula ecuatoriana válida."
+      },
+      {
+        "Contains": "Invalid identification for algorithm MOD_02_EC",
+        "Friendly": "RUC inválido.",
+        "Hint": "Verifica que tenga 13 dígitos y sea un RUC ecuatoriano válido."
+      },
+      {
+        "Contains": "Invalid identification for algorithm NONE",
+        "Friendly": "Identificación inválida.",
+        "Hint": "La identificación debe tener al menos 6 caracteres alfanuméricos, sin símbolos."
+      },
+      {
+        "Contains": "duplicate",
+        "Friendly": "Registro duplicado.",
+        "Hint": "Revisa si esta identificación ya está repetida en el archivo o ya existe en el sistema."
+      },
+      {
+        "Contains": "already exists",
+        "Friendly": "Registro ya existe.",
+        "Hint": "Este deudor ya está registrado. Si deseas actualizarlo, usa el flujo de actualización."
+      },
+      {
+        "Contains": "Email",
+        "Friendly": "Problema con el correo.",
+        "Hint": "Revisa que el correo tenga formato válido y no incluya espacios."
+      },
+      {
+        "Contains": "Phone",
+        "Friendly": "Problema con el teléfono.",
+        "Hint": "Revisa el formato del teléfono según las reglas configuradas."
+      },
+      {
+        "Contains": "DueDate",
+        "Friendly": "Problema con la fecha de vencimiento.",
+        "Hint": "Usa una fecha válida. Formato recomendado: YYYY-MM-DD."
+      },
+      {
+        "Contains": "Amount",
+        "Friendly": "Problema con el monto.",
+        "Hint": "El monto debe ser numérico y mayor a 0."
+      },
+      {
+        "Contains": "Concept",
+        "Friendly": "Problema con el concepto.",
+        "Hint": "Revisa que el concepto no exceda el límite permitido y no contenga caracteres extraños."
+      },
+      {
+        "Contains": "LastName",
+        "Friendly": "Problema con los apellidos.",
+        "Hint": "Verifica que no esté vacío (si es obligatorio) y que tenga un formato válido."
+      }
+    ]
+  },
 
   "Core": {
     "BaseUrl": "https://api-uat-modular-peyza-core-g2dzgkdgb2ecakam.mexicocentral-01.azurewebsites.net",
