Fix: Se cambio el contenido de los errores en el excel

--- a/src/UCS.DebtorBatch.Api/appsettings.json
+++ b/src/UCS.DebtorBatch.Api/appsettings.json
@@ -2,15 +2,12 @@
   "Import": {
     "MaxFileSizeMB": 10,
     "BatchSize": 500,
-
     "FailFastThresholdPercent": 10,
     "FailFastInspectRows": 100,
-
     "JobStateTTLHours": 24,
     "ValidationCacheTTLDays": 7,
     "RetryAttempts": 3,
     "CoreTimeoutSeconds": 30,
-
     "PresignedUrlExpirationMinutes": 15,
     "FileRetentionDays": 7
   },
@@ -18,89 +15,144 @@
     "Mappings": [
       {
         "Contains": "ExternalKey/Identificación is required",
+        "Field": "Identificación",
+        "Rule": "Requerido",
         "Friendly": "Identificación obligatoria.",
-        "Hint": "Completa la columna Identificación (cédula/RUC) para esta fila."
+        "Hint": "Completa la columna Identificación (cédula/RUC) para esta fila.",
+        "Priority": 200
       },
       {
         "Contains": "FirstName/Nombres is required",
+        "Field": "Nombres",
+        "Rule": "Requerido",
         "Friendly": "Nombres obligatorios.",
-        "Hint": "Completa la columna Nombres. No puede quedar vacía."
+        "Hint": "Completa la columna Nombres. No puede quedar vacía.",
+        "Priority": 200
       },
+
       {
         "Contains": "Amount must be > 0",
+        "Field": "Monto",
+        "Rule": "Mayor a 0",
         "Friendly": "Monto inválido.",
-        "Hint": "El monto debe ser mayor a 0. Ejemplo: 25.50"
+        "Hint": "El monto debe ser mayor a 0. Ejemplo: 25.50",
+        "Priority": 180
       },
       {
         "Contains": "DueDate is invalid or missing",
+        "Field": "Fecha de vencimiento",
+        "Rule": "Formato",
         "Friendly": "Fecha de vencimiento inválida o vacía.",
-        "Hint": "Ingresa una fecha válida. Formato recomendado: YYYY-MM-DD (ej: 2026-02-12)."
+        "Hint": "Ingresa una fecha válida. Formato recomendado: YYYY-MM-DD (ej: 2026-02-12).",
+        "Priority": 180
       },
       {
         "Contains": "Invalid email format",
+        "Field": "Correo",
+        "Rule": "Formato",
         "Friendly": "Correo inválido.",
-        "Hint": "Ejemplo válido: usuario@dominio.com (sin espacios)."
+        "Hint": "Ejemplo válido: usuario@dominio.com (sin espacios).",
+        "Priority": 180
       },
       {
         "Contains": "Invalid phone format",
+        "Field": "Teléfono",
+        "Rule": "Formato",
         "Friendly": "Teléfono inválido.",
-        "Hint": "Usa un formato permitido (ej: +593987654321 o 0987654321, según tu perfil)."
+        "Hint": "Usa un formato permitido (ej: +593987654321 o 0987654321, según tu perfil).",
+        "Priority": 180
       },
 
       {
         "Contains": "Invalid identification for algorithm MOD_01_EC",
+        "Field": "Identificación",
+        "Rule": "Cédula EC",
         "Friendly": "Cédula inválida.",
-        "Hint": "Verifica que tenga 10 dígitos y sea una cédula ecuatoriana válida."
+        "Hint": "Verifica que tenga 10 dígitos y sea una cédula ecuatoriana válida.",
+        "Priority": 170
       },
       {
         "Contains": "Invalid identification for algorithm MOD_02_EC",
+        "Field": "Identificación",
+        "Rule": "RUC EC",
         "Friendly": "RUC inválido.",
-        "Hint": "Verifica que tenga 13 dígitos y sea un RUC ecuatoriano válido."
+        "Hint": "Verifica que tenga 13 dígitos y sea un RUC ecuatoriano válido.",
+        "Priority": 170
       },
       {
         "Contains": "Invalid identification for algorithm NONE",
+        "Field": "Identificación",
+        "Rule": "Formato",
         "Friendly": "Identificación inválida.",
-        "Hint": "La identificación debe tener al menos 6 caracteres alfanuméricos, sin símbolos."
+        "Hint": "La identificación debe tener al menos 6 caracteres alfanuméricos, sin símbolos.",
+        "Priority": 170
       },
+
       {
         "Contains": "duplicate",
+        "Field": "Identificación",
+        "Rule": "Duplicado",
         "Friendly": "Registro duplicado.",
-        "Hint": "Revisa si esta identificación ya está repetida en el archivo o ya existe en el sistema."
+        "Hint": "Revisa si esta identificación ya está repetida en el archivo o ya existe en el sistema.",
+        "Priority": 120
       },
       {
         "Contains": "already exists",
+        "Field": "Identificación",
+        "Rule": "Existe",
         "Friendly": "Registro ya existe.",
-        "Hint": "Este deudor ya está registrado. Si deseas actualizarlo, usa el flujo de actualización."
+        "Hint": "Este deudor ya está registrado. Si deseas actualizarlo, usa el flujo de actualización.",
+        "Priority": 120
       },
+
+      // ====== FALLBACKS (solo si no matcheó arriba) ======
       {
         "Contains": "Email",
+        "Field": "Correo",
+        "Rule": "Validación",
         "Friendly": "Problema con el correo.",
-        "Hint": "Revisa que el correo tenga formato válido y no incluya espacios."
+        "Hint": "Revisa que el correo tenga formato válido y no incluya espacios.",
+        "Priority": 10
       },
       {
         "Contains": "Phone",
+        "Field": "Teléfono",
+        "Rule": "Validación",
         "Friendly": "Problema con el teléfono.",
-        "Hint": "Revisa el formato del teléfono según las reglas configuradas."
+        "Hint": "Revisa el formato del teléfono según las reglas configuradas.",
+        "Priority": 10
       },
       {
         "Contains": "DueDate",
+        "Field": "Fecha de vencimiento",
+        "Rule": "Validación",
         "Friendly": "Problema con la fecha de vencimiento.",
-        "Hint": "Usa una fecha válida. Formato recomendado: YYYY-MM-DD."
+        "Hint": "Usa una fecha válida. Formato recomendado: YYYY-MM-DD.",
+        "Priority": 10
       },
       {
         "Contains": "Amount",
+        "Field": "Monto",
+        "Rule": "Validación",
         "Friendly": "Problema con el monto.",
-        "Hint": "El monto debe ser numérico y mayor a 0."
+        "Hint": "El monto debe ser numérico y mayor a 0.",
+        "Priority": 10
       },
       {
         "Contains": "Concept",
+        "Field": "Concepto",
+        "Rule": "Validación",
         "Friendly": "Problema con el concepto.",
-        "Hint": "Revisa que el concepto no exceda el límite permitido y no contenga caracteres extraños."
+        "Hint": "Revisa que el concepto no exceda el límite permitido y no contenga caracteres extraños.",
+        "Priority": 10
       },
       {
         "Contains": "LastName",
+        "Field": "Apellidos",
+        "Rule": "Validación",
         "Friendly": "Problema con los apellidos.",
-        "Hint": "Verifica que no esté vacío (si es obligatorio) y que tenga un formato válido."
+        "Hint": "Verifica que no esté vacío (si es obligatorio) y que tenga un formato válido.",
+        "Priority": 10
       }
     ]
   },
